--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -14,5 +14,8 @@ jobs:
         with:
           go-version: 1.20
 
-      - name: Test
+      - name: TestList
         run: go test -v ./storage/list
+
+      - name: TestMap
+        run: go test -v ./storage/map
