--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -24,6 +24,8 @@ jobs:
           echo ${GOROOT}
 
       - name: Install dependencies
+        env: 
+          GOPATH: /home/runner/work/goListHW/storage
         run: |
           go get github.com/stretchr/testify/assert
 
