--- a/.github/workflows/storage.yml
+++ b/.github/workflows/storage.yml
@@ -23,11 +23,11 @@ jobs:
           echo ${GOPATH}
           echo ${GOROOT}
 
-      - name: Install dependencies
-        env: 
-          GOPATH: /home/runner/work/goListHW/storage/map
-        run: |
-          go get github.com/stretchr/testify/assert
+#      - name: Install dependencies
+#        env: 
+#          GOPATH: /home/runner/work/goListHW/storage/map
+#        run: |
+#          go get github.com/stretchr/testify/assert
 
-      - name: TestMap
-        run: go test -v ./storage/map
+#      - name: TestMap
+#        run: go test -v ./storage/map
